# pqview

./: LICENSE  README.md  pyproject.toml
src/pqview/: cli.py
tests/resources/: titanic.parquet
